fix for column wrapping and button style inside columns

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -1,10 +1,16 @@
+.section > div.columns-wrapper {
+  padding-top: 0;
+}
+
 .columns > div {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .columns > div > div {
   order: 1;
+  flex-basis: 50%;
+  text-align: center;
 }
 
 .columns > div > .columns-img-col {
@@ -23,11 +29,24 @@
   display: inline-block;
 }
 
+.columns a.button {
+  font-family: var(--global-tertiary-font-family);
+  font-weight: bold;
+  text-transform: none;
+  background: none;
+  color: var(--global-color-black);
+  padding: 0;
+  margin: 0;
+  white-space: break-spaces;
+}
+
 @media (min-width: 900px) {
   .columns > div {
     align-items: flex-start;
     flex-direction: unset;
     gap: 32px;
+    align-items: end;
+    text-align: center;
   }
 
   .columns > div > div {
